 * Outline view changes:
   * Now shows nested elements.
   * Clicking on named elements correctly selects their name in the editor (previously it just revealed the element).
   * Added context menu to the elements, added some filter actions to the toolbar of the view.
 * Constructor/Desctructors/Allocators/Deallocators now show up in Outline view and quick Outline.
 * Fix in Documentation hovers: removed redudant text, and now displays concrete archetype (Class, Interface, Struct, Union), instead of "Aggregate".
 * Fixed issue #47: NPE while parsing is expression. Source ranges will still be missing though.
 * Fixed some minor NPE and assertion failure bugs.
 * Fixed issue #51, parsing AssertFailedException.
 * Resolved #19 in a definite and proper way (instead of with a workaround hack).
 * Fixed some issues relate to completion of imports, including issue #53. 
 * Fixed issue #58: typing the dot causes selected completion proposal to be applied.

== DDT 0.4.3 (2011-06-02) ==
 * Resolved issue #12, added Content Assist preference page. 
   * Options: Completion insert/override; Single proposals automatic insert; Auto-Activation enable and delay;
   * Added Content Assist proposal auto-insertion trigger characters: ' ', '=', ';', '.'.  
 * Fixed issue #31: Indent auto edit: full indent deletion is incorrectly triggered on certain positions.
 * Fixed some shortcomings related to auto indent in lines that started with comments.
 * Resolved issue #30, changed implementation of editor folding to a newer API:
   * Now the editor can fold non-DDoc comments as well (a previous limitation).
   * Now the editor can fold unittests and conditional declarations (debug/version).
   * Added folding preference page, can now configure the initial state (folded or not) of each folding group.
   * The folding groups/kinds are now: comments, DDoc comments, module header comments, aggregate types, functions, unittests, conditional declarations.