@@ -29,6 +29,7 @@ import dtool.ast.definitions.DefinitionVariable;
 import dtool.ast.definitions.Module;
 import dtool.ast.definitions.Symbol;
 import dtool.ast.expressions.ExpLiteralFunc;
+import dtool.ast.expressions.ExpLiteralNewAnonClass;
 import dtool.ast.expressions.Resolvable;
 import dtool.ast.references.CommonRefNative;
 import dtool.ast.references.CommonRefQualified;
@@ -181,5 +182,10 @@ public abstract class ASTNeoDefaultVisitor extends ASTNeoAbstractVisitor impleme
 	public boolean visit(ExpLiteralFunc elem) {
 		return true;
 	}
+	@Override
+	public boolean visit(ExpLiteralNewAnonClass elem) {
+		return true;
+	}
+
 	
 }
