@@ -29,6 +29,7 @@ import dtool.ast.definitions.DefinitionVariable;
 import dtool.ast.definitions.Module;
 import dtool.ast.definitions.Symbol;
 import dtool.ast.expressions.ExpLiteralFunc;
+import dtool.ast.expressions.ExpLiteralNewAnonClass;
 import dtool.ast.expressions.Resolvable;
 import dtool.ast.references.CommonRefNative;
 import dtool.ast.references.CommonRefQualified;
@@ -181,6 +182,10 @@ public class ASTNeoHomogenousVisitor extends ASTNeoAbstractVisitor implements IA
 	
 	@Override
 	public final boolean visit(ExpLiteralFunc node) {
+		return true;
+	}
+	@Override
+	public boolean visit(ExpLiteralNewAnonClass elem) {
 		return true;
 	}
 	
