@@ -32,6 +32,7 @@ import dtool.ast.definitions.DefinitionStruct;
 import dtool.ast.definitions.DefinitionTemplate;
 import dtool.ast.definitions.DefinitionUnion;
 import dtool.ast.expressions.ExpLiteralFunc;
+import dtool.ast.expressions.ExpLiteralNewAnonClass;
 
 public class DeeCodeFoldingBlockProvider implements IFoldingBlockProvider {
 	
@@ -39,6 +40,7 @@ public class DeeCodeFoldingBlockProvider implements IFoldingBlockProvider {
 	protected boolean collapseFunctions;
 	protected boolean collapseFunctionLiterals;
 	protected boolean collapseAggregates;
+	protected boolean collapseAnonClasses;
 	protected boolean collapseUnittests;
 	protected boolean collapseConditionals;
 	
@@ -48,12 +50,14 @@ public class DeeCodeFoldingBlockProvider implements IFoldingBlockProvider {
 		
 		collapseFunctions = preferenceStore.getBoolean(PreferenceConstants.EDITOR_FOLDING_INIT_METHODS);
 		collapseAggregates = preferenceStore.getBoolean(PreferenceConstants.EDITOR_FOLDING_INIT_CLASSES);
-		collapseFunctionLiterals = preferenceStore.getBoolean(
-				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_FUNCTIONLITERALS);
 		collapseUnittests = preferenceStore.getBoolean(
 				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_UNITTESTS);
 		collapseConditionals = preferenceStore.getBoolean(
 				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_CONDITIONALS);
+		collapseFunctionLiterals = preferenceStore.getBoolean(
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_FUNCTIONLITERALS);
+		collapseAnonClasses = preferenceStore.getBoolean(
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_ANONCLASSES);
 	}
 	
 	protected IFoldingBlockRequestor requestor;
@@ -112,6 +116,12 @@ public class DeeCodeFoldingBlockProvider implements IFoldingBlockProvider {
 					@Override
 					public boolean visit(ExpLiteralFunc elem) {
 						reportBlock(elem, DeeFoldingBlockKind.FUNCTIONLITERALS, collapseFunctionLiterals);
+						return true;
+					}
+					
+					@Override
+					public boolean visit(ExpLiteralNewAnonClass elem) {
+						reportBlock(elem, DeeFoldingBlockKind.ANONCLASSES, collapseAnonClasses);
 						return true;
 					}
 					
