@@ -21,13 +21,16 @@ public class DeeSourceFoldingPreferenceBlock extends SourceCodeFoldingPreference
 		super.addOverlayKeys(keys);
 		keys.add(new OverlayPreferenceStore.OverlayKey(
 				OverlayPreferenceStore.BOOLEAN,
-				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_FUNCTIONLITERALS));
-		keys.add(new OverlayPreferenceStore.OverlayKey(
-				OverlayPreferenceStore.BOOLEAN,
 				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_UNITTESTS));
 		keys.add(new OverlayPreferenceStore.OverlayKey(
 				OverlayPreferenceStore.BOOLEAN,
 				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_CONDITIONALS));
+		keys.add(new OverlayPreferenceStore.OverlayKey(
+				OverlayPreferenceStore.BOOLEAN,
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_FUNCTIONLITERALS));
+		keys.add(new OverlayPreferenceStore.OverlayKey(
+				OverlayPreferenceStore.BOOLEAN,
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_ANONCLASSES));
 	}
 	
 	@Override
@@ -49,14 +52,17 @@ public class DeeSourceFoldingPreferenceBlock extends SourceCodeFoldingPreference
 	protected void addInitiallyFoldOptions(Group group) {
 		super.addInitiallyFoldOptions(group);
 		createCheckBox(group,
+				DeePreferencesMessages.Folding_initFoldUnitTests,
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_UNITTESTS);
+		createCheckBox(group,
+				DeePreferencesMessages.Folding_initFoldConditionals,
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_CONDITIONALS);
+		createCheckBox(group,
 				DeePreferencesMessages.Folding_initFoldFunctionLiterals,
 				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_FUNCTIONLITERALS);
 		createCheckBox(group,
-				DeePreferencesMessages.Folding_initUnitTests,
-				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_UNITTESTS);
-		createCheckBox(group,
-				DeePreferencesMessages.Folding_initConditionals,
-				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_CONDITIONALS);
+				DeePreferencesMessages.Folding_initFoldAnonClasses,
+				DeeFoldingPreferenceConstants.EDITOR_FOLDING_INIT_ANONCLASSES);
 	}
 	
 }
