@@ -11,6 +11,7 @@
    * Clicking on named elements correctly selects their name in the editor (previously it just revealed the element).
    * Added context menu to the elements, added some filter actions to the toolbar of the view.
  * Constructor/Desctructors/Allocators/Deallocators now show up in Outline view and quick Outline.
+ * Implemented #52: function/delegate literals can now be folded. And also anonymous classes.
  * Fix in Documentation hovers: removed redudant text, and now displays concrete archetype (Class, Interface, Struct, Union), instead of "Aggregate".
  * Fixed issue #47: NPE while parsing is expression. Source ranges will still be missing though.
  * Fixed some minor NPE and assertion failure bugs.
